--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
         ]
     },
     "config": {
-        "preferred-install": "dist",
+        "preferred-install": "dist"
          
     }
 }
