--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "ramytalal/label-printer": "^1.1",
         "guzzlehttp/guzzle": "^7.5",
         "laravel/telescope": "^5.0",
-        "stripe/stripe-php": "^13.14"
+        "stripe/stripe-php": "^13.14",
+        "nesbot/carbon": "^3.9.1"
     },
 
     "require-dev": {
